[gd_scene load_steps=5 format=3 uid="uid://vwjmhn4l6hb"]

[ext_resource type="Theme" uid="uid://dt57x1ox0ea6o" path="res://resources/themes/main_menu.tres" id="1_2fbfq"]
[ext_resource type="Script" uid="uid://d0q2o7lmk2ru1" path="res://scripts/animation/credits.gd" id="2_2fbfq"]
[ext_resource type="VideoStream" uid="uid://b1jq06bixcyxr" path="res://videos/bg.ogv" id="3_2fbfq"]
[ext_resource type="StyleBox" uid="uid://5hlkgiwhb1wf" path="res://materials/shaders/loadingbar.tres" id="4_kyhnv"]

[node name="Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_2fbfq")
script = ExtResource("2_2fbfq")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_2fbfq")
autoplay = true
expand = true

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -52.0
offset_right = 52.0
offset_bottom = -12.0
grow_vertical = 0
theme_override_styles/panel = ExtResource("4_kyhnv")

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Hold SPACE to skip"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="skiptimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="skiptimer" to="." method="_on_skiptimer_timeout"]
